--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
     position: relative;
 }
 
+#blockOfInvaders{
+    width: 250px;
+    height: 500px;
+    position: relative;
+    margin: 0 auto;
+}
+
 .block{
     width: 20px;
     height: 20px;
